# libgltf

gltf/: CMakeLists.txt  detail.hpp  glb.cpp  gltf.cpp  gltf.hpp  io.hpp  meshloader.cpp  meshloader.hpp  validate.cpp
gltf/detail/: support.cpp  support.hpp
gltf/v1/: parse.cpp  parse.hpp
